<resources>
    <string name="app_name">Quiz Constructor</string>
    <string name="lbl_home_screen">Home</string>
    <string name="lbl_quiz_list_screen">Quiz List</string>
    <string name="lbl_profile_screen">Profile</string>
    <string name="lbl_about_screen">About</string>
    <string name="questions">Questions</string>
    <string name="choose_category">Choose Category</string>
    <string name="upload_quiz">Upload Quiz</string>
    <string name="uploaded">Uploaded</string>
    <string name="enter_quiz_title">Enter Quiz Title</string>
    <string name="answer">Answer</string>
    <string name="second_answer">Second Answer</string>
    <string name="write_question">Write Question</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="lbl_option_1">Option 1</string>
    <string name="lbl_option_2">Option 2</string>
    <string name="lbl_option_3">Option 3</string>
    <string name="lbl_option_4">Option 4</string>
    <string name="option_1">Option 1:</string>
    <string name="option_2">Option 2:</string>
    <string name="option_3">Option 3:</string>
    <string name="option_4">Option 4:</string>
    <string name="lbl_create_quiz">Create Quiz</string>
    <string name="lbl_play_quiz">Play Quiz</string>
    <string name="lbl_result">Result</string>
    <string name="error_enter_question_statement">Enter Question Statement</string>
    <string name="error_option">Enter Option: %d</string>
    <string name="error_write_answer">Write Answer</string>
    <string name="error_write_second_answer">Write Second Answer</string>
    <string name="error_answer_not_match">Answer Not Match with options</string>
    <string name="error_enter_quiz_title">Enter Quiz Title</string>
    <string name="error_select_category">Select A Category First</string>
    <string name="error_add_min_question">Please Add 5 Question at least</string>
    <string name="message_quiz_created">Quiz Created!</string>
    <string name="lbl_quiz_categories">Quiz Categories</string>
    <string name="lbl_option">Option %d %s</string>
    <string name="lbl_answer">Answer %s</string>
    <string name="lbl_second_answer">Answer 2 %s</string>
    <string name="category_single_answer">Single answer</string>
    <string name="category_multiple_answers">Multiple \nanswers</string>
    <string name="category_input_answer">Input answer</string>
    <string name="category_choice_answer">Choice answer</string>
    <string name="start">Start</string>
    <string name="total_question">Total Question: %s</string>
    <string name="category_name">Category: %s</string>
    <string name="lbl_wrong">Wrong</string>
    <string name="lbl_check_answer">Check Answer</string>
    <string name="error_choose_answer">Please choose an option</string>
    <string name="lbl_next">Next</string>
    <string name="right">Right</string>
    <string name="message_right_answer">Right Answer: %s</string>
    <string name="back_home">Back Home</string>
    <string name="result_status">%d right out of %d</string>
    <string name="about_app">Приложение для разработки образовательных тестов, которое может использоваться преподавателями для контроля знаний обучающихся</string>
    <string name="lbl_welcome">Hi, Alina</string>
</resources>