<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@+id/navigation_home_screen">

    <fragment
        android:id="@+id/navigation_home_screen"
        android:name="com.evsyuk.quizconstructor.ui.fragment.HomeFragment"
        android:label="@string/lbl_home_screen"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_create_quiz"
            app:destination="@id/navigation_create_quiz_screen"/>
        <action
            android:id="@+id/action_navigation_home_to_quizList"
            app:destination="@id/navigation_quiz_list_screen" />

<!--            app:enterAnim="@anim/slide_in_right"-->
<!--            app:exitAnim="@anim/slide_out_left"-->
<!--            app:popEnterAnim="@anim/slide_in_left"-->
<!--            app:popExitAnim="@anim/slide_out_right"-->

    </fragment>

    <fragment
        android:id="@+id/navigation_create_quiz_screen"
        android:name="com.evsyuk.quizconstructor.ui.fragment.CreateQuizFragment"
        android:label="@string/lbl_create_quiz"
        tools:layout="@layout/fragment_create_quiz"/>

    <fragment
        android:id="@+id/navigation_quiz_list_screen"
        android:name="com.evsyuk.quizconstructor.ui.fragment.QuizAllFragment"
        android:label="@string/lbl_quiz_list_screen"
        tools:layout="@layout/fragment_quiz_all">
        <argument
            android:name="category_id"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="" />
        <action
            android:id="@+id/action_navigation_quizList_to_playQuiz"
            app:destination="@id/navigation_playQuiz_screen" />
    </fragment>

    <fragment
        android:id="@+id/navigation_playQuiz_screen"
        android:name="com.evsyuk.quizconstructor.ui.fragment.PlayQuizFragment"
        android:label="@string/lbl_play_quiz"
        tools:layout="@layout/fragment_play_quiz">
        <argument
            android:name="quizData"
            app:argType="com.evsyuk.quizconstructor.data.model.QuizData" />
        <action
            android:id="@+id/action_quizFragment_to_resultFragment"
            app:destination="@id/navigation_result_screen"
            app:popUpTo="@id/home_navigation"
            app:popUpToInclusive="true" />
    </fragment>


    <fragment
        android:id="@+id/navigation_result_screen"
        android:name="com.evsyuk.quizconstructor.ui.fragment.ResultFragment"
        android:label="@string/lbl_result"
        tools:layout="@layout/fragment_result">
        <argument
            android:name="quizResult"
            app:argType="com.evsyuk.quizconstructor.data.model.QuizResult" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.evsyuk.quizconstructor.ui.fragment.AboutFragment"
        android:label="@string/lbl_about_screen"
        tools:layout="@layout/fragment_about" />
</navigation>