<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatar_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/lbl_welcome"
            android:textColor="@color/colorPrimaryBlack"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_create_quiz"
        android:layout_width="130dp"
        android:layout_height="180dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/navy_background"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/plus_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus" />

        <TextView
            android:id="@+id/create_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/lbl_create_quiz"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryBlack"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/quiz_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="24dp"
        android:text="@string/lbl_quiz_categories"
        android:textColor="@color/colorPrimaryBlack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/category_single_ans"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.5"
            android:background="@drawable/navy_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/category_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_circle_check" />

            <TextView
                android:id="@+id/category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_single_answer"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/category_multiple_ans"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:background="@drawable/navy_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/category_image2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_check_mark" />

            <TextView
                android:id="@+id/category_name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_multiple_answers"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/category_input_ans"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.5"
            android:background="@drawable/navy_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/category_image3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_edit" />

            <TextView
                android:id="@+id/category_name3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_input_answer"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/category_choice_ans"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:background="@drawable/navy_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/category_image4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_choice" />

            <TextView
                android:id="@+id/category_name4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_choice_answer"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>