<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.PlayQuizFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvQuizTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="60dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryGreen"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textQuizTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryBlack"
                    android:textSize="24sp"
                    tools:text="Quiz Title" />
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvQuestion"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvQuizTitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_play_question"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textQuestionStatement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:alpha="0"
                    android:textColor="@color/colorPrimaryBlack"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline3"
                    tools:alpha="1" />

                <RadioGroup
                    android:id="@+id/radioGroupOption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    tools:checkedButton="@id/radioOption2">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioOption1"
                        style="@style/CustomRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        tools:alpha="1"
                        tools:text="Option 1" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioOption2"
                        style="@style/CustomRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        tools:alpha="1"
                        tools:text="Option 2" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioOption3"
                        style="@style/CustomRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        tools:alpha="1"
                        tools:text="Option 3" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioOption4"
                        style="@style/CustomRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        tools:alpha="1"
                        tools:text="Option 4" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/answerId"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/answer"
                    android:padding="8dp"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnCheckAnswer"
                    style="@style/CustomButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:alpha="0"
                    android:text="@string/lbl_check_answer"
                    android:textColor="@color/colorPrimaryBlack"
                    tools:alpha="1" />

                <TextView
                    android:id="@+id/textAnswerStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/lbl_wrong"
                    android:textColor="@color/red_700"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/textRightAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/colorPrimaryBlack"
                    android:textSize="20sp"
                    android:visibility="gone"
                    tools:text="Right Answer: Option A"
                    tools:visibility="visible" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>